--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "buh_one",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://NAZARDOSS.github.io.BuhOne",
+  "homepage": "https://nazardoss.github.io/First-connection-with-Figma",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
